[workspace]
members = ["fusen-net", "examples","device"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["kwsc98 <kwsc98@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "FusenNet"


[workspace.dependencies]
fusen-net = { path = "fusen-net", version = "0.0.1" }
#网络协议处理
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"
quinn = "0.10"
rustls = { version = "0.21.6", default-features = false, features = ["quic", "dangerous_configuration"] }
rcgen = "0.11"
libc = "0.2"

#日志处理
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3"
pretty_env_logger = "0.5"

#json序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1", features = ["v4"] }
