[package]
name = "device"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "tun2device"
path = "device.rs"

[dependencies]
tun2 = { version = "2", features = ["async"] }
packet = "0.1"
futures = "0.3"
tokio.workspace = true