[package]
name = "examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "client"
path = "src/client.rs"
[[bin]]
name = "client-agent"
path = "src/client_agent.rs"
[[bin]]
name = "server"
path = "src/server.rs"


[dependencies]
fusen-net.workspace = true
tokio.workspace = true
structopt = "0.3"

#日志处理
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
pretty_env_logger.workspace = true
