[package]
name = "fusen-net"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
#网络协议处理
tokio.workspace = true
bytes.workspace = true
futures.workspace = true


#日志处理
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
pretty_env_logger.workspace = true

#json处理
serde.workspace = true
serde_json.workspace = true

uuid.workspace = true
